@@ -3,11 +3,11 @@
 # administracion@joomlanetprojects.com
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-JUMIPLUGINDESC=<p>Este plugin de contenido incluye scripts en los artículos de Joomla!: desde un archivo o desde la base de datos del componente Jumi.</p><p><b>Uso: {jumi [codigo_fuente] [arg1] [arg2] ... [argN]}</b><br />where</p><ul><li><b>codigo_fuente</b><br />es la ruta y nombre del archivo a incluir o<br /> la ID de la tabla donde se guardo el código.<br />La ruta y nombre puede ser relativa a la ruta ofrecida desde los parámetros del plugin. Si no es equivalente al raíz de Joomla!.<br />La id debe ir precedida de un asterisko (e.g. *4).</li><li><b>[arg1] ... [argN]</b><br />son argumentos opcionales. Esto depende del archivo a incluir. Los argumentos son accesibles desde el array $jumi[] en el archivo incluido.</li></ul><p>Ejemplos de inclusion + argumentos:  {jumi [plugin/content/jumi/jumi_demo.php][primero][segundo]}</p><p>Ejemplo de inclusión desde la base de datos a través de la id:  {jumi [*1]}</p><p>Existe un módulo y un plugin Jumi totalmente compatibles.</p><p>Información adicional y recursos: <a href="http://jumi.vedeme.cz">Descargas y guias</a>, <a href="http://edo.webmaster.am/jumi">Trucos</a>.</p>
+JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: <jumi stored_code_source>code_written</jumi></b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or<br />ID of Jumi componet databese table record.<br />The filepathname is a relative one with respect to Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: <jumi plugin/content/jumi/jumi_demo.php></jumi></p><p>Example 2: <jumi *1></jumi></p><p>Example 3: <jumi *1><?php echo 'Hello O\'Harra!'; ?></jumi></p><p>Example 4: <jumi><?php echo 'Hello O\'Harra!'; ?></jumi></p><p><b>Security</b>: You can set filter tag jumi to <a href="http://docs.joomla.org/Screen.content.15#Filtering_Options_.28HTML.29">Blacklist defined user groups</a>.</p><p>Additional information and resources: <a href="http://jumi.vedeme.cz">Downloads & guides</a>, <a href="http://edo.webmaster.am/jumi">Tips & tricks</a>.</p>
 PARAMABSPATH=Ruta absoluta opcional de los archivos incluidos. Si se deja en blanco se tomará el raíz de Joomla! por defecto. Sin barra al final.
 PARAMCLEARJUMI=SI se selecciona Sí, el código Jumi no será mostrado ni procesado.
 PARAMNESTED=Si se selecciona sí y el código suministrado incluye la sintaxis jumi[], esta será procesada también.
-PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code <jumi></jumi> in question from the article instead.
 ERROR_CONTENT=Jumi está activo pero <b>no hay nada que mostrar</b>.<br />Especifica el código fuente (primeros corchetes).
 ERROR_FILE=El archivo<br /><b>%s</b><br />no existe o no tiene permisos de lectura!
 ERROR_RECORD=La ID:<b>%d</b> no existe en la base de datos!
