@@ -1,11 +1,11 @@
 # $Id$
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-JUMIPLUGINDESC=<p>Этот плагин включает настраиваемoе содержание в статьи Joomla! из файла или из Jumi компоненты.</p><p><b>Использование: {jumi [stored_code_source] [arg1] [arg2] ... [argN]}</b><br />где</p><ul><li><b>stored_code_source</b><br />путь файла, которые должны быть включены или<br />номер приложения Jumi компоненты<br />Путь файл является относительным к абсолютной пути по умолчанию, который может быть установлен в параметрах плагина. Если оставить пустым, то будет идентичен корневому каталогу Joomla.<br />Номеру приложения должно предшествовать звездочка (например *4).</li><li><b>[arg1] ... [argN]</b><br />являются необязательными аргументами, зависящие от вашего скрипта. Достип к аргументам можно получить с помощью $jumi[] массива.</li></ul><p>Пример включения файла с аргументами:  {jumi [plugin/content/jumi/jumi_demo.php][first][second]}</p><p>Примир включения приложения:  {jumi [*1]}</p><p>Существует также совместимые с плагином Jumi модуль и компонента.</p><p>Дополнительные ресурсы: <a href="http://jumi.vedeme.cz">Дистрибутивы и инструкции</a>, <a href="http://edo.webmaster.am/jumi">Советы и хитрости</a>.</p>
+JUMIPLUGINDESC=<p>This content plugin includes into Joomla! articles custom script: from a file or from Jumi component database record.</p><p><b>Usage: <jumi stored_code_source>code_written</jumi></b><br />where</p><ul><li><b>stored_code_source</b><br />is a filepathname to be included or<br />ID of Jumi componet databese table record.<br />The filepathname is a relative one with respect to Default Absolute Path that can be set in the plugin parameters. If not set then is equivalent to Joomla! root.<br />The record ID must be preceeded by an asterrisk (e.g. *1).</li><li><b>code_written</b><br />can be written html,php, javascript, css code. Use Jumi coder (editor button) for code inclusion into the article!!!</li></ul><p>You can omit either stored_code_source or code_written if you like. Code_written is processed first.</p><p>Example 1: <jumi plugin/content/jumi/jumi_demo.php></jumi></p><p>Example 2: <jumi *1></jumi></p><p>Example 3: <jumi *1><?php echo 'Hello O\'Harra!'; ?></jumi></p><p>Example 4: <jumi><?php echo 'Hello O\'Harra!'; ?></jumi></p><p><b>Security</b>: You can set filter tag jumi to <a href="http://docs.joomla.org/Screen.content.15#Filtering_Options_.28HTML.29">Blacklist defined user groups</a>.</p><p>Additional information and resources: <a href="http://jumi.vedeme.cz">Downloads & guides</a>, <a href="http://edo.webmaster.am/jumi">Tips & tricks</a>.</p>
 PARAMABSPATH=Не обязательный абсолютный путь для включаемого файла. Это ставится впереди пути файла, который должен быть включен. Если оставить пустым, то будет идентичен корневому каталогу Joomla. Используйте без / в конце.
 PARAMCLEARJUMI=Если установлено значение Да, Jumi код не отображается и не обрабатывается.
 PARAMNESTED=Если установлено значение Да, Jumi включит код и также исполнит Jumi код находяшийся в включаемом коде.
-PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code {jumi}{/jumi} in question from the article instead.
+PARAMDEBUGMODE=If set to No then Jumi does not show error messages. It clears Jumi code <jumi></jumi> in question from the article instead.
 ERROR_CONTENT=Jumi работает, но <b>нечего показывать</b>.<br />Введите код и/или укажите непустой код.
 ERROR_FILE=Файл <b>%s</b> не существует или не является чтимым!
 ERROR_RECORD=Запись с ID:<b>%d</b> не существует!
