@@ -17,7 +17,8 @@ This package contains the following extensions:
     - Jumi module
 
 Changes:
-    - syntax of Jumi content plugin changed to {jumi stored_code_source}code_written{/jumi}
+    - syntax of Jumi content plugin changed to <jumi stored_code_source>code_written</jumi>
+    - the syntax enables to use Joomla! filtering options (blacklists)
     - added Jumi editor-xtd (button) plugin that encodes/decodes code_written
     - Jumi content plugin processes html, php, js, css codes added directly into Joomla! articles by Jumi button
     - added Debug mode parameter to Jumi content plugin. If Debug is set to No then no error messages are shown and the relevant Jumi syntax is cleared from the article
